--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(233, 233, 233);
+  background-color: rgb(30, 31, 34);
   padding: 40px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -182,11 +182,12 @@ body {
 .project-image img {
   width: 100%;
   height: auto;
+  cursor: pointer;
   transition: transform 0.3s;
 }
 
-.project-item:hover .project-image img {
-  transform: scale(1.1);
+.project-item:hover {
+  transform: scale(1.05);
 }
 
 .project-overlay {
