--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -13,15 +13,15 @@
 
 .navbar-content {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
-  padding: 0 5em;
+  padding: 0 10.5em;
 }
 
 .navbar-name-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .navbar-name {
@@ -36,8 +36,8 @@
 .navbar-subtitle {
   font-family: monospace;
   font-size: 14px;
-  margin-left: 0;
-  align-items: flex-end;
+  margin-left: 1em;
+  align-items: center;
 }
 
 .navbar-subtitle span:nth-child(1) {
@@ -52,11 +52,22 @@
   color: rgb(107, 166, 239); /* Blue */
 }
 
+.navbar-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 12.85em;
+}
+
+.navbar-logo img {
+  max-height: 6rem;
+}
+
 .navbar-nav {
-  margin-top: 87px;
-  margin-left: auto;
-  margin-right: 4em;
-  align-items: flex-end;
+  margin-top: 0;
+  /*margin-left: auto;*/
+  /*margin-right: 0em;*/
+  align-items: center;
 }
 
 .navbar-content {
@@ -68,7 +79,7 @@
 
 .navbar-brand {
   flex: 1;
-  text-align: center;
+  text-align: left;
 }
 
 .navbar-nav {
