--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -56,15 +56,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 12.85em;
+  margin-left: 0em;
+    margin-top: 2.7em;
 }
 
 .navbar-logo img {
-  max-height: 6rem;
+  max-height: 4.8rem;
 }
 
 .navbar-nav {
-  margin-top: 0;
+  margin-top: 6.3rem;
   /*margin-left: auto;*/
   /*margin-right: 0em;*/
   align-items: center;
