--- a/src/ProjectGrid.css
+++ b/src/ProjectGrid.css
@@ -1,5 +1,3 @@
-/*src/ProjectGrid.css*/
-
 /* Project Grid Container */
 .project-grid-header {
   text-align: center;
@@ -24,17 +22,26 @@
   position: relative;
   overflow: hidden;
   border-radius: 8px;
-}
-
-.project-image img {
-  width: 100%;
-  height: auto;
-  cursor: pointer;
   transition: transform 0.3s;
+  aspect-ratio: 16 / 9;  /* Set a fixed aspect ratio for all project items */
 }
 
 .project-item:hover {
   transform: scale(1.05);
+}
+
+.project-image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.project-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.3s;
 }
 
 .project-overlay {
@@ -73,18 +80,17 @@
 
 /* Technology Icons Style Update */
 .technology-icons {
-    position: absolute;
-    bottom: 10px;  /* Position at the bottom */
-    left: 0;
-    right: 0;
-    text-align: center; /* Center align the icons */
-    padding: 5px 0; /* Give some padding */
-    /*background-color: rgba(0, 0, 0, 0.5); !* Optional: adds a subtle overlay for better visibility *!*/
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 5px 0;
 }
 
 .technology-icons img {
-    width: 40px; /* Larger size */
-    height: 40px; /* Maintain aspect ratio */
-    margin: 0 5px; /* Space out icons */
-    vertical-align: middle; /* Align icons better vertically */
+  width: 40px;
+  height: 40px;
+  margin: 0 5px;
+  vertical-align: middle;
 }
